[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rarelink"
authors = [
    {name = "Adam SL Graefe", email="adam.graefe@charite.de"},
    {name = "Filip Rehburg", email="filip.rehburg@charite.de"},

     ]
description = "Rare Disease Interoperability Framework linking Registry Use, HL7 FHIR and the GA4GH Phenopacket Schema"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "Rare Disease",
    "Interoperability",
    "FHIR",
    "Phenopacket Schema",
    "REDCap"
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Rare Diseases"
]
dependencies = [
    "numpy", 
    "jupyter", 
    "pandas", 
    "phenopackets", 
    "pytest", 
    "phenopacket_mapper @ git+https://github.com/BIH-CEI/phenopacket_mapper.git"
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest>=7.0.0,<8.0.0"]
docs = ["sphinx>=7.0.0", "sphinx-rtd-theme>=1.3.0", "sphinx-copybutton>=0.5.0"]

[project.urls]
homepage = "https://github.com/BIH-CEI/RareLink"
repository = "https://github.com/BIH-CEI/RareLink.git"
documentation = "https://BIH-CEI.github.io/RareLink/stable"
bugtracker = "https://github.com/BIH-CEI/RareLink/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = { attr = "rarelink.__version__" }

# The following would provide a command line executable called `sample`
# which executes the function `main` from this package when invoked.
[project.scripts]  # Optional
sample = "rarelink.pipelines.redcap_phenopacket_pipeline.phenopacket_pipeline:main"
