[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rarelink"
authors = [
    {name = "Adam SL Graefe", email="adam.graefe@bih-charite.de"},
    {name = "Filip Rehburg", email="filip.rehburg@charite.de"},
    {name = "Samer Alkarkoukly", email="mabbouda@uni-koeln.de"},
    {name = "Daniel Danis", email="daniel.danis@bih-charite.de"},
    {name = "Ana Grönke", email="agroenke@uni-koeln.de"},
    {name = "Miriam R Huebner", email="miriam-rebecca.huebner@charite.de"},
    {name = "Steffen Sander", email="steffen.sander@charite.de"},
    {name = "Sophie A I Klopfenstein", email="sophie.klopfenstein@charite.de"},
    {name = "Alexander Bartschke", email="alexander.bartschke@bih-charite.de"},
    {name = "Thomas Debertshäuser", email="thomas.debertshaeuser@charite.de"},
    {name = "Margaux Gatrio", email="margaux.gatrio@bih-charite.de"},
    {name = "Daniel R Korn", email="dkorn@ad.unc.edu"},
    {name = "Jana Zschüntzsch", email="j.zschuentzsch@med.uni-goettingen.de"},
    {name = "Elisabeth F Nyoungui", email="elisabeth.nyoungui@med.uni-goettingen.de"},
    {name = "Tatiana Kalashnikova", email="tatiana.kalashnik1@ucalgary.ca"},
    {name = "Beata Derfalvi", email="beata.derfalvi@iwk.nshealth.ca"},
    {name = "Nicola Wright", email="nicola.wright@albertahealthservices.ca"},
    {name = "Susanna Wiegand", email="susanna.wiegand@charite.de"},
    {name = "Peter Kühnen", email="peter.kuehnen@charite.de"},
    {name = "Melissa A Haendel", email="mhaendel@email.unc.edu"},
    {name = "Peter N Robinson", email="peter.robinson@bih-charite.de"},
    {name = "Sylvia Thun", email="sylvia.thun@bih-charite.de"},
    {name = "Oya Beyan", email="oya.beyan@uni-koeln.de"}
]

description = "Rare Disease Interoperability Framework linking Registry Use, HL7 FHIR and the GA4GH Phenopacket Schema"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "Rare Disease",
    "Interoperability",
    "FHIR",
    "Phenopacket Schema",
    "REDCap"
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Rare Diseases"
]
dependencies = [
    "numpy", 
    "jupyter", 
    "pandas", 
    "phenopackets", 
    "pytest",
    "requests",
    "config",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "sphinx-rtd-theme",
    "click", 
    "typer"
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest>=7.0.0,<8.0.0"]
docs = ["sphinx>=7.0.0", "sphinx-rtd-theme>=1.3.0", "sphinx-copybutton>=0.5.0"]

[project.urls]
homepage = "https://github.com/BIH-CEI/RareLink"
repository = "https://github.com/BIH-CEI/RareLink.git"
documentation = "https://rarelink.readthedocs.io/en/latest/"
bugtracker = "https://github.com/BIH-CEI/RareLink/issues"

[tool.setuptools]
packages = ["rarelink"]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
rarelink = ["data/*.json", "config/*.yaml"]
version = { attr = "rarelink.__version__" }

# The following would provide a command line executable called `sample`
# which executes the function `main` from this package when invoked.
[project.scripts]  # Optional
sample = "rarelink.pipelines.redcap_phenopacket_pipeline.phenopacket_pipeline:main"
